<resources>

    <string name="app_name">TV Media</string>

    <!-- General -->
    <string name="all_play">Play</string>
    <string name="all_remind_me">Remind me</string>
    <string name="all_like">Like</string>
    <string name="all_dislike">Dislike</string>
    <string name="all_watchlist">Watchlist</string>
    <string name="all_download">Download</string>
    <string name="all_share">Share</string>
    <string name="all_undo">Undo</string>
    <string name="all_live">Live</string>

    <plurals name="all_days">
        <item quantity="zero">%d days</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="all_hours">
        <item quantity="zero">%d hours</item>
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="all_minutes">
        <item quantity="zero">%d minutes</item>
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <!-- Now Playing -->
    <string name="now_playing_title">Now Playing</string>
    <string name="now_playing_item_season_info">Season %1$d - Episode %2$d</string>
    <string name="now_playing_item_broadcast_past">Streamed %s ago</string>
    <string name="now_playing_item_broadcast_future">Watch in %s</string>

    <!-- Media View -->
    <string name="media_view_description_not_available">Description not available.</string>
    <string name="media_view_broadcast_date">Broadcast time:</string>
    <string name="media_view_expire_date">Expires on:</string>
    <string name="media_view_published_date">Published on:</string>
    <string name="media_view_region_availability">Region availability:</string>
    <string name="media_view_share_content">"Watch \"%1$s\" on TV Media!\n%2$s</string>
    <string name="media_view_watchlist_success">Added to your watch list</string>
    <string name="media_view_download_success">Starting to download media…</string>

    <!-- Content descriptions -->
    <string name="description_media_thumbnail">Media thumbnail</string>

</resources>